--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,19 @@
 cmake_minimum_required(VERSION 3.16)
-project(libhello)
+project(libsim)
 
 include(dependencies.cmake)
 
-add_library(libhello
-  src/hello.cpp
-)
+# add_library(librms
+#   src/RMS.cpp
+# )
 
-target_include_directories(libhello
-  PUBLIC
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-)
+# target_include_directories(librms
+#   PUBLIC
+#     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+# )
 
-target_link_libraries(libhello
-  fmt::fmt
-)
+# target_link_libraries(librms
+#   fmt::fmt
+# )
 
 add_subdirectory(app)
