--- a/input/config.yaml
+++ b/input/config.yaml
@@ -1,11 +1,11 @@
 robots:
-  large_sweepers:
-  small_sweepers:
-  large_vacuums:
-  small_vacuums:
-  large_mops:
-  small_mops:
+  large_sweepers: 4
+  small_sweepers: 2
+  large_vacuums: 3
+  small_vacuums: 1
+  large_mops: 2
+  small_mops: 4
 rooms:
-  large: []
-  medium: []
-  small: []
+  large: ["bedroom"]
+  medium: ["hub","hallway"]
+  small: ["bathroom"]
