Created a Catch2 test for Robot Class
Created a Catch2 test for Robot Class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,9 @@ project(libsim)
 
 include(dependencies.cmake)
 
-project(
-    CatchExample 
-    VERSION 0.1.0
-    DESCRIPTION "Example source code for doing C++ unit tests with Catch."
-    LANGUAGES CXX)
+add_library(robot
+src/robot.cpp
+)
 
 # add_library(librms
 #   src/RMS.cpp
@@ -22,6 +20,6 @@ project(
 #   fmt::fmt
 # )
 
-# add_subdirectory(app)
+add_subdirectory(app)
+# add_subdirectory(tests)
 
-add_subdirectory(tests)
